--- a/badavidd/week03/day02/pokemon/CMakeLists.txt
+++ b/badavidd/week03/day02/pokemon/CMakeLists.txt
@@ -3,4 +3,4 @@ project(pokemon)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(pokemon main.cpp)
+add_executable(pokemon main.cpp pokemon.cpp pokemon.h)
