garden in progress

--- a/badavidd/week04/day02/garden/CMakeLists.txt
+++ b/badavidd/week04/day02/garden/CMakeLists.txt
@@ -3,4 +3,4 @@ project(garden)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(garden main.cpp)
+add_executable(garden main.cpp plants.cpp plants.h)
